--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -426,7 +426,7 @@ DLG_GENERAL DIALOG DISCARDABLE  30, 65, 228, 158
 STYLE DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "Keyboard options"
 LANGUAGE 0x09, 0x1
-FONT 9, "Tahoma"
+FONT 8, "MS Shell Dlg"
 {
    ICON		IDI_GENERAL,IDC_STATIC,4,5,18,21
    GROUPBOX	"Select keyboard", IDC_STATIC,26,2,65,72 
@@ -440,9 +440,9 @@ FONT 9, "Tahoma"
 		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,33,57,54,11 
 
    GROUPBOX	"User defined keyboards", IDC_STATIC,95,2,126,72 
-   CONTROL	"Yet 2 set (&D)", IDC_LAYOUT_YET2BUL, BUTTON,
+   CONTROL	"Yet 2 set (&Y)", IDC_LAYOUT_YET2BUL, BUTTON,
 		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,101,15,54,11 
-   CONTROL	"Yet 3 set (&S)", IDC_LAYOUT_YET3BUL, BUTTON,
+   CONTROL	"Yet 3 set (&Z)", IDC_LAYOUT_YET3BUL, BUTTON,
 		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,101,29,54,11 
    CONTROL	"3 set 3&89", IDC_LAYOUT_389, BUTTON,
 		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,101,43,54,11 
@@ -485,7 +485,7 @@ DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
 STYLE DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "Register Word"
 LANGUAGE 0x09, 0x01
-FONT 9, "Tahoma"
+FONT 8, "MS Shell Dlg"
 BEGIN
     LTEXT           "&String",-1,15,17,41,8
     EDITTEXT        ID_WR_STRING,65,16,84,12,ES_AUTOHSCROLL
@@ -500,7 +500,7 @@ DLG_SELECTDICTIONARY DIALOG DISCARDABLE  34, 31, 186, 85
 STYLE DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "Select Dictionary"
 LANGUAGE 0x09, 0x01
-FONT 9, "Tahoma"
+FONT 8, "MS Shell Dlg"
 BEGIN
     LTEXT           "Current Dictionary",-1,5,15,84,8
     LTEXT           "",ID_SD_DICPATH,11,28,162,9
@@ -511,7 +511,7 @@ DLG_ABOUT DIALOG DISCARDABLE  30, 65, 215, 135
 STYLE DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "About Saenaru..."
 LANGUAGE 0x09, 0x01
-FONT 9, "Tahoma"
+FONT 8, "MS Shell Dlg"
 {
    LTEXT	"Saenaru Hangul Input Method ver 1.1.0", IDC_STATIC, 43,29,126,8 
    ICON		IDI_ABOUT, IDC_STATIC, 98,6,18,18 
@@ -577,8 +577,8 @@ LANGUAGE 0x09, 0x1
 BEGIN
     IDS_DICFILENAME         "SAENARU.DIC"
     IDS_DIC_KEY             ""
-    IDS_SYM_KEY             "SymbolEn"
-    IDS_WORD_KEY            "WordEn"
+    IDS_SYM_KEY             "Symbol"
+    IDS_WORD_KEY            "Word"
 END
 
 STRINGTABLE DISCARDABLE 
