--- a/src/makefile.inc
+++ b/src/makefile.inc
@@ -1,4 +1,4 @@
 #To be included by makefile.def.
 copyfile: $(TARGET)
-        copy saenaru*.inf $(**D)
-        copy saenaru*.dic $(**D)
+        copy ..\setup\saenaru*.inf $(**D)
+        copy ..\resource\saenaru*.dic $(**D)
