[#315198] do not use globalalloc() to read whole dict file and use readfile() to use memory effectivly. [#315199] show similar words in the candidate window optionally.

--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -137,6 +137,8 @@ BEGIN
     CONTROL         "전체 단자모 조합 (&U)",
                     IDC_FULL_MULTIJOMO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
                     16,139,78,10
+    CONTROL         "비슷한 단어 보기(&M)", IDC_SIMILAR_WORDS, BUTTON, BS_AUTOCHECKBOX | WS_TABSTOP,
+                    134,140,90,10 
 END
 
 DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
@@ -446,14 +448,14 @@ END
 // English (U.S.) resources
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 
-DLG_GENERAL DIALOG DISCARDABLE  30, 65, 228, 158
+DLG_GENERAL DIALOG DISCARDABLE  30, 65, 243, 158
 STYLE DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "Keyboard options"
 LANGUAGE 0x09, 0x1
 FONT 8, "MS Shell Dlg"
 {
    ICON		IDI_GENERAL,IDC_STATIC,4,5,18,21
-   GROUPBOX	"Select keyboard", IDC_STATIC,26,2,65,72 
+   GROUPBOX	"Select keyboard", IDC_STATIC,26,2,68,72 
    CONTROL	"&2 set", IDC_LAYOUT_OLD2BUL, BUTTON,
 		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,33,15,54,11 
    CONTROL	"&3 set Final", IDC_LAYOUT_3FIN, BUTTON,
@@ -463,49 +465,48 @@ FONT 8, "MS Shell Dlg"
    CONTROL	"3 set &No-shift", IDC_LAYOUT_3SUN, BUTTON,
 		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,33,57,54,11 
 
-   GROUPBOX	"User defined keyboards", IDC_STATIC,95,2,126,72 
+   GROUPBOX	"User defined keyboards", IDC_STATIC,98,2,138,72 
    CONTROL	"Yet 2 set (&Y)", IDC_LAYOUT_YET2BUL, BUTTON,
-		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,101,15,54,11 
+		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,103,15,54,11 
    CONTROL	"Yet 3 set (&Z)", IDC_LAYOUT_YET3BUL, BUTTON,
-		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,101,29,54,11 
+		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,103,29,54,11 
    CONTROL	"2 set North Korea(&P)", IDC_LAYOUT_NK_2BUL, BUTTON,
-		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,101,43,54,11 
+		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,103,43,75,11 
    CONTROL	"New 2 set (&D)", IDC_LAYOUT_NEW2BUL, BUTTON,
-		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,161,15,54,11 
+		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,178,15,54,11 
    CONTROL	"New 3 set (&S)", IDC_LAYOUT_NEW3BUL, BUTTON,
-		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,161,29,54,11 
+		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,178,29,54,11 
    CONTROL	"&Ahnmatae", IDC_LAYOUT_AHNMATAE, BUTTON,
-		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,161,43,54,11 
+		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,178,43,54,11 
    //CONTROL	"&User defined", IDC_LAYOUT_USER, BUTTON,
    //		BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE,115,57,77,11 
    CONTROL      "",IDC_LAYOUT_USER,COMBOBOX,CBS_DROPDOWNLIST | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_VSCROLL
-                ,115,56,100,95
+                ,114,57,117,92
    CONTROL	"Co&llective", IDC_COMPOSITE_TYPING, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,79,53,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,79,53,10 
    CONTROL	"&Concurrent", IDC_CONCURRENT_TYPING, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,83,79,49,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,77,79,49,10 
    CONTROL	"D&Vorak", IDC_DVORAK_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,150,91,35,10
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,91,35,10
    CONTROL      "&Qwerty shortcut", IDC_QWERTY_HOTKEY_SUPPORT , BUTTON,
-                BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,150,103,67,10 
+                BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,103,67,10
    CONTROL	"Delete by &Jaso unit", IDC_BACKSPACE_BY_JAMO, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,135,79,71,10
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,135,79,71,10 
    CONTROL	"<&ESC> to ENG mode", IDC_ESCENG_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,103,79,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,102,79,10 
    CONTROL	"<Shift>-<SPACE> toggle &Han/Eng", IDC_USE_SHIFT_SPACE, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,90,122,10
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,90,122,10
    CONTROL	"E&xtended Hanja", IDC_KSX1002_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,115,96,10 
-   CONTROL      "Se&Lect Hanja with <SPACE>", IDC_HANJA_CAND_SPACE, BUTTON,
-                BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,
-                    126, 115, 122, 10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,114,67,10 
+   CONTROL      "Se&lect Hanja with <SPACE>", IDC_HANJA_CAND_SPACE, BUTTON,
+                BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 135,126,106,10 
    CONTROL	"Restrict to Wansung (&KS X 1001) syllables", IDC_KSX1001_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,127,156,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,114,147,11
    CONTROL	"Compose Hangul Jam&Os", IDC_JAMOS, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,139,94,10 
-   CONTROL      "&Raw Jamo compose",
-                    IDC_FULL_MULTIJOMO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    126,139,78,10
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,126,94,10
+   CONTROL      "&Raw Jamo compose", IDC_FULL_MULTIJOMO, BUTTON,
+                BS_AUTOCHECKBOX | WS_TABSTOP, 21,138,78,10
+   CONTROL      "Show si&milar words", IDC_SIMILAR_WORDS, BUTTON, BS_AUTOCHECKBOX | WS_TABSTOP,135,138,78,10 
 }
 
 DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
