add a missing  resource

--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -521,7 +521,7 @@ FONT 8, "MS Shell Dlg"
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,135,79,71,10 
    CONTROL	"<&ESC> to ENG mode", IDC_ESCENG_SUPPORT, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,102,79,10 
-   CONTROL	"<Shift>-<SPACE> &Han/Eng toggle", IDC_USE_SHIFT_SPACE, BUTTON,
+   CONTROL	"<Shift>-<SPACE> &Han/Eng Toggle", IDC_USE_SHIFT_SPACE, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,90,122,10
    CONTROL	"E&xtended Hanja", IDC_KSX1002_SUPPORT, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,114,67,10 
@@ -670,6 +670,8 @@ BEGIN
     IDS_NOSTRING            "There is no string\r\nPlease enter the string"
     IDS_NOMEMORY            "No memory."
     IDS_REGWORDRET          "Fail to register Word"
+
+    IDS_HANGUL_TOGGLE          "&Han/Eng Toggle"
 END
 
 STRINGTABLE DISCARDABLE 
