[#315131] fixed resource id

--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -589,13 +589,13 @@ FONT 8, "MS Shell Dlg"
    CONTROL "Han/Eng Toggle key", -1, BUTTON, BS_GROUPBOX | WS_CHILD | WS_VISIBLE, 7, 4, 130, 66
    CONTROL "Left", -1, STATIC, SS_LEFT | WS_CHILD | WS_VISIBLE | WS_GROUP, 43, 18, 18, 10
    CONTROL "Right", -1, STATIC, SS_LEFT | WS_CHILD | WS_VISIBLE | WS_GROUP, 68, 18, 24, 11
-   CONTROL "SHIFT", 3, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 29, 40, 10
-   CONTROL "-", 4, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 29, 16, 10
-   CONTROL "CTRL", 5, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 41, 40, 10
-   CONTROL "-", 6, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 41, 16, 10
-   CONTROL "ALT", 7, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 53, 40, 10
-   CONTROL "-", 8, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 53, 16, 10
-   CONTROL "", 9, COMBOBOX, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 80, 41, 51, 13
+   CONTROL "SHIFT", IDC_LSHIFT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 29, 40, 10
+   CONTROL "-", IDC_RSHIFT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 29, 16, 10
+   CONTROL "CTRL", IDC_LCTRL, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 41, 40, 10
+   CONTROL "-", IDC_RCTRL, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 41, 16, 10
+   CONTROL "ALT", IDC_LALT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 53, 40, 10
+   CONTROL "-", IDC_RALT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 53, 16, 10
+   CONTROL "", IDC_TOGGLE, COMBOBOX, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 80, 41, 51, 13
    CONTROL "OK", 1, BUTTON, BS_DEFPUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 143, 12, 50, 16
    CONTROL "Default", 2, BUTTON, BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 143, 30, 50, 16
 }
