add a 2SET HAN Indicator icon

--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -37,6 +37,7 @@ IDI_ABOUT               ICON    DISCARDABLE     "..\\resource\\about.ico"
 IMEICON 	ICON    DISCARDABLE		"..\\resource\\penindic.ico"
 INDIC_PEN	ICON    DISCARDABLE		"..\\resource\\penindic.ico"
 INDIC_HAN	ICON    DISCARDABLE		"..\\resource\\text\\hankey.ico"
+INDIC_HAN2	ICON    DISCARDABLE		"..\\resource\\text\\han2key.ico"
 INDIC_ENG	ICON	DISCARDABLE		"..\\resource\\text\\engkey.ico"
 INDIC_HANJA	ICON	DISCARDABLE		"..\\resource\\text\\hanjakey.ico"
 INDIC_KEY	ICON    DISCARDABLE		"..\\resource\\keyboard.ico"
