--- a/tip/SaenaruTip.vcxproj
+++ b/tip/SaenaruTip.vcxproj
@@ -89,6 +89,7 @@
       <TargetMachine>MachineX86</TargetMachine>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>comctl32.lib;ucrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>saenarutip.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -109,6 +110,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>comctl32.lib;ucrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>saenarutip.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -126,6 +128,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>comctl32.lib;ucrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>saenarutip.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -152,6 +155,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="config.cpp" />
     <ClCompile Include="btnshape.cpp" />
     <ClCompile Include="btnime.cpp" />
     <ClCompile Include="cleanup.cpp" />
