use softprops/action-gh-release@v1

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -109,7 +109,7 @@ jobs:
           done
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@1e07f4398721186383de40550babbdf2b84acfc5
+        uses: softprops/action-gh-release@v1
         with:
           draft: false
           prerelease: ${{ contains(steps.metadata.outputs.version, 'rc') || contains(steps.metadata.outputs.version, 'beta') }}
